# netflixGPT_recommender

./: README.md  app.py  pyproject.toml
data/: titles_with_emotions_emojis.csv
prompts/: item_emotions.prompt  user_emotions.prompt
